tests/ui/associated-types/dont-suggest-self-referential-constraint.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-self-referential-constraint.rs:7:31
   |
LL |     let _: Option<&I::Item> = iter.next();
   |            ----------------   ^^^^^^^^^^^ expected `Option<&<I as Iterator>::Item>`, found `Option<<I as Iterator>::Item>`
   |            |
   |            expected due to this
   |
   = note: expected enum `Option<&_>`
              found enum `Option<_>`
help: try using `.as_ref()` to convert `Option<<I as Iterator>::Item>` to `Option<&<I as Iterator>::Item>`
   |
LL |     let _: Option<&I::Item> = iter.next().as_ref();
   |                                          +++++++++

error[E0308]: mismatched types
  --> $DIR/dont-suggest-self-referential-constraint.rs:17:5
   |
LL | fn assoc_to_concrete<T: Foo>(x: T::Assoc) -> u32 {
   |                                              --- expected `u32` because of return type
LL |     x
   |     ^ expected `u32`, found associated type
   |
   = note:         expected type `u32`
           found associated type `<T as Foo>::Assoc`
help: consider constraining the associated type `<T as Foo>::Assoc` to `u32`
   |
LL | fn assoc_to_concrete<T: Foo<Assoc = u32>>(x: T::Assoc) -> u32 {
   |                            +++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
